# espclaw

./: .gitignore  CMakeLists.txt  LICENSE  PLAN.md  README.md  README.zh.md  partitions_16mb.csv  partitions_4mb.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c5  sdkconfig.defaults.esp32s3
hal/: hal_adc.c  hal_adc.h  hal_onewire.c  hal_pwm.c  hal_pwm.h  hal_servo.c
main/: CMakeLists.txt  Kconfig.projbuild  config.h  idf_component.yml  main.c  messages.h  nvs_keys.h  platform.h
main/agent/: agent_loop.c  agent_loop.h  context_builder.c  context_builder.h  persona.c  persona.h  session.c  session.h
main/bus/: message_bus.c  message_bus.h
main/channel/: channel.h  channel_bark.c  channel_dingtalk.c  channel_discord.c  channel_lark.c  channel_mqtt.c  channel_pushplus.c  channel_registry.c  channel_serial.c  channel_slack.c  channel_telegram.c  channel_wecom.c
main/hal/: hal_adc.c  hal_adc.h  hal_gpio.c  hal_gpio.h  hal_onewire.c  hal_onewire.h  hal_pwm.c  hal_servo.h
main/mem/: nvs_manager.c  nvs_manager.h
main/net/: wifi_manager.c  wifi_manager.h
main/provider/: llm_auth.c  llm_auth.h  provider.h  provider_anthropic.c  provider_openai.c  provider_registry.c
main/service/: cron_service.c  cron_service.h
main/tool/: builtin_tools.def  tool.h  tool_adc.c  tool_cron.c  tool_gpio.c  tool_memory.c  tool_network.c  tool_onewire.c  tool_persona.c  tool_pwm.c  tool_registry.c  tool_registry.h  tool_servo.c  tool_system.c
main/util/: json_util.c  json_util.h  ratelimit.c  ratelimit.h  text_buffer.c  text_buffer.h
tool/: tool_adc.c  tool_onewire.c  tool_pwm.c  tool_servo.c
